Bug 240999 - KMail crashes after trying to send pgp signed mail
Summary: KMail crashes after trying to send pgp signed mail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks:
 
Reported: 2010-06-07 11:27 UTC by Bjoern Ricks
Modified: 2011-02-18 10:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bjoern Ricks 2010-06-07 11:27:56 UTC
Version:           enterprise (using Devel) 
OS:                Linux

This bug occurs on mac and linux. It causes a "*** KMail got signal 11 (Exiting)" output on the console. Drkonqi isn't started. Therefore I can't provide any traces. SVN revision is 1134585

Reproducible: Always

Steps to Reproduce:
Set OpenPGP crypto in Identities menu. Start to write a new mail and set sign mail. Try to send mail. Afterwards kontact is closed and "*** KMail got signal 11 (Exiting)" is printed


Expected Results:  
A signed mail is sent
Comment 1 Christophe Marin 2010-06-07 11:51:00 UTC
Reassign to kmail. You may get a backtrace with gdb:  gdb --args kmail --nofork
Comment 2 Bjoern Ricks 2010-06-07 12:52:03 UTC
Program received signal SIGSEGV, Segmentation fault.
0xb5d10fbc in Message::SignJob::process (this=0x8a9faa0) at ../../messagecomposer/signjob.cpp:164
164     ../../messagecomposer/signjob.cpp: Datei oder Verzeichnis nicht gefunden.
        in ../../messagecomposer/signjob.cpp
(gdb) bt
#0  0xb5d10fbc in Message::SignJob::process (this=0x8a9faa0) at ../../messagecomposer/signjob.cpp:164
#1  0xb5d0b14c in Message::ContentJobBasePrivate::doNextSubjob (this=0x89f9968) at ../../messagecomposer/contentjobbase.cpp:48
#2  0xb5d0ac7d in Message::ContentJobBase::qt_metacall (this=0x8a9faa0, _c=QMetaObject::InvokeMetaMethod, _id=28, _a=0xbfffeccc) at ./contentjobbase.moc:75
#3  0xb5d10c4a in Message::SignJob::qt_metacall (this=0x8a9faa0, _c=QMetaObject::InvokeMetaMethod, _id=28, _a=0xbfffeccc) at ./signjob.moc:67
#4  0xb6ac3b2a in QMetaObject::metacall (object=0x8a9faa0, cl=3221220140, idx=28, argv=0xbfffeccc) at kernel/qmetaobject.cpp:237
#5  0xb6ad20f5 in QMetaObject::activate (sender=0x8901b80, m=0xb6bd02e8, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3293
#6  0xb6ad9d57 in QSingleShotTimer::timeout (this=0x8901b80) at .moc/release-shared/qtimer.moc:82
#7  0xb6ad9e6c in QSingleShotTimer::timerEvent (this=0x8901b80) at kernel/qtimer.cpp:308
#8  0xb6acef74 in QObject::event (this=0x8901b80, e=0x21) at kernel/qobject.cpp:1212
#9  0xb6d2cbec in QApplicationPrivate::notify_helper (this=0x807c990, receiver=0x8901b80, e=0xbffff200) at kernel/qapplication.cpp:4300
#10 0xb6d3375e in QApplication::notify (this=0xbffff5cc, receiver=0x8901b80, e=0xbffff200) at kernel/qapplication.cpp:3704
#11 0xb7e08b3a in KApplication::notify (this=0xbffff5cc, receiver=0x8901b80, event=0xbffff200) at ../../kdeui/kernel/kapplication.cpp:302
#12 0xb6abe92b in QCoreApplication::notifyInternal (this=0xbffff5cc, receiver=0x8901b80, event=0xbffff200) at kernel/qcoreapplication.cpp:704
#13 0xb6aed986 in QCoreApplication::sendEvent (this=0x807f734) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#14 QTimerInfoList::activateTimers (this=0x807f734) at kernel/qeventdispatcher_unix.cpp:603
#15 0xb6aea644 in timerSourceDispatch (source=0x807f700) at kernel/qeventdispatcher_glib.cpp:184
#16 0xb52262f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#17 0xb5229fd8 in ?? () from /lib/libglib-2.0.so.0
#18 0xb522a1b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#19 0xb6aea335 in QEventDispatcherGlib::processEvents (this=0x8053708, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#20 0xb6deb255 in QGuiEventDispatcherGlib::processEvents (this=0x8053708, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#21 0xb6abcf49 in QEventLoop::processEvents (this=0xbffff4c4, flags=DWARF-2 expression error: DW_OP_reg operations must be used either alone or in conjuction with DW_OP_piece.
) at kernel/qeventloop.cpp:149
#22 0xb6abd39a in QEventLoop::exec (this=0xbffff4c4, flags=...) at kernel/qeventloop.cpp:201
#23 0xb6ac152f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#24 0xb6d2cc87 in QApplication::exec () at kernel/qapplication.cpp:3579
#25 0x0804a736 in main (argc=2, argv=0xbffff784) at ../../kmail/main.cpp:145
Comment 3 Bjoern Ricks 2010-06-07 12:58:31 UTC
Kmail only crashes if the body is empty, but if the body contains some text the mail is put into outbox folder and isn't sent.
Comment 4 Bjoern Ricks 2010-06-07 14:21:15 UTC
S/MIME signing is also affected and kmail crashes with empty body
Comment 5 Leo Franchi 2010-06-07 16:31:10 UTC
SVN commit 1135536 by lfranchi:

Don't crash when signing when body is empty.

BUG: 240999


 M  +1 -0      composer.cpp  
 M  +1 -3      signjob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135536