Don't crash when signing when body is empty.

BUG: 240999

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1135536